Make IsPermanent non-virtual so it can be called in the destructor.  b=334605  r=mrbkap  rs=brendan